[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braingrowthprediction"
version = "0.1.0"
description = "Brain growth prediction on top of a modified BrLP code base"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pyyaml",
  "numpy==1.*",
  "pandas==2.*",
  "matplotlib==3.*",
  "nibabel==5.*",
  "torch==2.*",
  "tensorboard==2.*",
  "monai==1.3.*",
  "monai-generative==0.2.3",
  "tqdm==4.*",
  "rich",
]

[project.scripts]
bgp = "bgp.cli:infer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
